# gf1200-cli

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: lib.rs  main.rs  state.rs
src/api/: mod.rs  responses.rs
src/repl/: mod.rs
src/repl/commands/: generic.rs  lan.rs  mod.rs  repl.rs
src/utils/: ui.rs
