[package]
name = "gf1200-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
inquire = "0.7.5"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
secrecy = "0.10.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[profile.release]
lto = true
strip = "symbols"
